--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "debug": "^3.1.0",
-    "json2md": "^1.5.11"
+    "json2md": "^1.5.11",
+    "lodash": "^4.17.4"
   }
 }
