update: change TOC format

--- a/build
+++ b/build
@@ -47,40 +47,98 @@ json2md.converters.md = async (filepath) => {
     return await readFile(filepath, {encoding: 'utf8'});
 };
 
-json2md.converters.toc = (contents) => {
-    const indent = 4;
-    const ul = '-';
-    const space = ' '.repeat(indent);
-    const usedHeaders = {};
-    const headers = [];
+json2md.converters.toc = ({contents, type}) => {
+    let tocStr;
 
-    contents.forEach((c) => {
-        const {name, level} = c;
-        let anchor = name.trim().toLowerCase().replace(/\s+/g, '-').replace(/-+$/, '');
-        const usedHeader = usedHeaders[anchor];
-        if (usedHeader) {
-            usedHeaders[anchor] = usedHeader + 1;
-            anchor = `${anchor}-${usedHeader}`;
-        } else {
-            usedHeaders[anchor] = 1;
-        }
-        const header = `${space.repeat(level - 2)}${ul} [${name}](#${anchor})`;
-        headers.push(header);
-    });
+    if (type === 'html') {
+        const lastParent = {};
 
-    const str = `## TOC
+        const makeLink = (name) => `<a href="#${encodeURI(name.toLowerCase())}">${name}</a>`;
+
+        const makeUI = () => ({
+            children: [],
+            toString(parentSpaces = '') {
+                const {children} = this;
+                const spaces = parentSpaces.repeat(2);
+                const childStr = children.map((n) => n.toString(spaces)).join('\n');
+                return `${parentSpaces}<ul>
+${childStr}
+${parentSpaces}</ul>`;
+            },
+        });
+
+        const makeLI = ({name, level}) => ({
+            name, level,
+            children: [],
+            toString(parentSpaces = '') {
+                const {name, children} = this;
+                const spaces = parentSpaces.repeat(2);
+
+                if (children.length === 0) {
+                    return `${parentSpaces}<li>${makeLink(name)}</li>`;
+                } else {
+                    const childStr = children.map((n) => n.toString(spaces)).join('\n');
+                    return `${parentSpaces}<li>
+${parentSpaces}  ${makeLink(name)}
+${parentSpaces}  <ul>
+${childStr}
+${parentSpaces}  </ul>
+${parentSpaces}</li>`;
+                }
+            },
+        });
+
+        const ui = makeUI();
+        contents.forEach((c) => {
+            const {level} = c;
+            const li = makeLI(c);
+
+            if (lastParent[level - 1]) {
+                lastParent[level - 1].children.push(li);
+            }
+            lastParent[level] = li;
+
+            if (level === 2) ui.children.push(li);
+        });
+
+        tocStr = ui.toString('  ');
+    } else if (type === 'markdown') {
+        const indent = 2;
+        const ul = '-';
+        const headers = [];
+        const space = ' '.repeat(indent);
+        const usedHeaders = {};
+        contents.forEach((c) => {
+            const {name, level} = c;
+            let anchor = name.trim().toLowerCase().replace(/\s+/g, '-').replace(/-+$/, '');
+            const usedHeader = usedHeaders[anchor];
+            if (usedHeader) {
+                usedHeaders[anchor] = usedHeader + 1;
+                anchor = `${anchor}-${usedHeader}`;
+            } else {
+                usedHeaders[anchor] = 1;
+            }
+            const header = `${space.repeat(level - 2)}${ul} [${name}](#${anchor})`;
+            headers.push(header);
+        });
+
+        tocStr = `<div>
+
+${headers.join('\n')}
+
+</div>`;
+    }
+
+    return `## TOC
 
 <!-- toc -->
 <details>
   <summary>目录</summary>
-  <p>
 
-${headers.join('\n')}
+${tocStr}
 
-  </p>
 </details>
 <!-- tocstop -->`;
-    return str;
 };
 
 async function getTitle(path) {
@@ -170,7 +228,7 @@ async function build() {
         {blockquote: pkg.description},
         {md: absPath('_docs/issue.md')},
         {md: absPath('_docs/license.md')},
-        {toc},
+        {toc: {contents: toc, type: 'html'}},
     ];
 
     debug('categories=%O', categories);
