--- a/build
+++ b/build
@@ -15,6 +15,8 @@ const _ = require('lodash');
 const debug = require('debug')('build');
 
 const categoryNames = {
+    k8s: 'K8S',
+    philosophy: '哲学',
     thinking: '思考',
     'front-end': '前端',
     design: '设计',
